add oneline.sh